# whep-digitalize

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  autocode.toml  pyproject.toml
.claude/: README.md  progress.md  results.tsv
.claude/commands/: autocode.md
.claude/docs/: architecture.md  codebase-map.md  common-changes.md  constants-and-options.md  conventions.md  migration-roadmap.md  r-to-python-mapping.md  session-prompts.md
.claude/guidelines/: constants.md  migration.md  performance.md  refactoring.md  testing.md
.claude/skills/migrate-module/: SKILL.md
.claude/skills/migration-status/: SKILL.md
.claude/skills/parity-check/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: bench.py
src/whep_digitize/: __init__.py  __main__.py  cli.py  contracts.py  pipeline.py
src/whep_digitize/export/: __init__.py  runner.py
src/whep_digitize/export/lists/: __init__.py  merge.py  unique_values.py  write.py
src/whep_digitize/export/processed_data/: __init__.py  export.py  layers.py
src/whep_digitize/general/: __init__.py  config.py  constants.py  directories.py  errors.py  options.py  paths.py  runner.py
src/whep_digitize/general/helpers/: __init__.py  _latin_ascii.py  assertions.py  checkpoints.py  console.py  frames.py  numeric.py  progress.py  sorting.py  strings.py  time_format.py  tokens.py
src/whep_digitize/ingest/: __init__.py  runner.py
src/whep_digitize/ingest/file_io/: __init__.py  discovery.py  metadata.py
src/whep_digitize/ingest/output/: __init__.py  consolidate.py  validate.py
src/whep_digitize/ingest/reading/: __init__.py  batching.py  header_normalization.py  read_utils.py  sheet_read.py
src/whep_digitize/ingest/transform/: __init__.py  processing.py  reshape.py  transform_utils.py
src/whep_digitize/postpro/: __init__.py  runner.py
src/whep_digitize/postpro/audit/: __init__.py  audit.py  config.py  export.py  validation.py
src/whep_digitize/postpro/clean_harmonize/: __init__.py  controls_cache.py  layer_runner.py  stage_inputs.py
src/whep_digitize/postpro/diagnostics/: __init__.py  output.py  preflight.py  rule_summaries.py  standardize_summaries.py
src/whep_digitize/postpro/rule_engine/: __init__.py  conditional_group.py  footnote_rules.py  matching_strategy.py  matching_values.py  payload_application.py  schema_validation.py  target_apply.py
src/whep_digitize/postpro/standardize_units/: __init__.py  aggregation.py  engine.py  orchestration.py  rules_setup.py
tests/: conftest.py  test_pipeline_e2e.py
tests/contracts/: test_contracts.py
tests/export/: test_export_runner.py  test_lists.py  test_processed_data.py
tests/fixtures/: README.md
tests/fixtures/synthetic/: clean_rules_sample.xlsx  conditional_group_inputs.json  data_audit_inputs.json  diagnostics_inputs.json  export_lists_inputs.json  export_processed_inputs.json  file_metadata_inputs.json  footnote_rules_inputs.json  header_names_inputs.json  layer_batch_inputs.json  matching_values_inputs.json  normalize_string_inputs.json  postpro_stage_input.json  rule_table_sample.csv  schema_validation_inputs.json  standardize_agg_inputs.json  standardize_inputs.json  target_apply_inputs.json  validate_long_inputs.json
tests/general/: test_config.py  test_constants.py  test_directories.py  test_helpers.py  test_progress.py  test_runner.py
tests/ingest/: test_consolidate.py  test_file_io.py  test_header_normalization.py  test_import_runner.py  test_processing.py  test_reading.py  test_transform.py  test_validate.py
tests/parity/: capture.py  r_harness.py  registry.py  test_conditional_group_parity.py  test_data_audit_parity.py  test_diagnostics_parity.py  test_export_lists_parity.py  test_export_processed_data_parity.py  test_file_metadata_parity.py  test_footnote_rules_parity.py  test_header_normalization_parity.py  test_import_stage_parity.py  test_layer_batch_parity.py  test_matching_parity.py  test_postpro_stage_parity.py  test_processing_parity.py  test_schema_validation_parity.py  test_sheet_read_parity.py  test_standardize_agg_parity.py  test_standardize_parity.py  test_string_normalization_parity.py  test_target_apply_parity.py  test_transform_parity.py  test_utilities_parity.py  test_validate_parity.py
tests/postpro/: test_clean_harmonize.py  test_conditional_group.py  test_data_audit.py  test_diagnostics.py  test_footnote_rules.py  test_matching.py  test_schema_validation.py  test_standardize_agg.py  test_standardize_units.py  test_target_apply.py  test_utilities.py
(+16 files in other folders)
